design fix: align admin menu link to vertical middle in the navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,6 +114,10 @@ a.app-admin-icon, a.app-admin-icon:hover {
     margin-left: 10px;
 }
 
+a.app-admin-icon > i {
+    height: 20px;
+}
+
 .error {
     color: red;
 }
